<resources>
    <string name="app_name">YCOIN</string>
    <string name="todo">TODO</string>
    <string name="textIntroducao">Em um mundo cada vez mais complexo, tomar decisões financeiras inteligentes pode ser um desafio. É por isso que estamos muito felizes em apresentar o Ycoin, o seu guia completo para educação financeira.</string>
    <string name="linkScreen2">Saiba mais!</string>
    <string name="title">YCOIN</string>
    <string name="title_Menu">Menu</string>
    <string name="line_2">TODO</string>
    <string name="lina2">TODO</string>
    <string name="action_settings">Settings</string>
    <string name="logo">TODO</string>
    <string name="saiba_mais">Saiba mais!</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="o_que_receita">O que é receita?</string>
    <string name="Button_Receita">Receita</string>
    <string name="Button_Despesa">Despesa</string>
    <string name="Explicacao_Receita">A receita é todo tipo de dinheiro recebido em troca de produtos ou serviços, ou seja, é o dinheiro, ou salário, ou retirada que você ganha para executar uma determinada função, atividade ou comercializar algum produto para outra pessoa, seja ela física ou jurídica. No entanto, nem toda entrada de dinheiro é classificada como receita. A aquisição de empréstimos e consignados é um exemplo claro de entrada, mas que não foi obtida em troca da prestação de serviços ou venda de produtos. Além disso, será preciso pagar com juros o valor emprestado, o que torna essa ação um exemplo de despesa. Os rendimentos obtidos com as aplicações financeiras, poupança e investimentos também devem ser receita, bem como rendas de aluguéis, já que eles representam um aumento do seu patrimônio mediante uma atividade específica. Outras receitas, como acordos judiciais, pensões alimentícias, e outros processos, também são considerados.</string>
    <string name="principais_exemplos_de_fontes_de_receita">Principais exemplos de fontes de receita</string>
    <string name="Principais_exemplos_Receita_Descritivo">comercialização de produtos para pessoas e/ou empresas; prestação de serviços para terceiros; salário ou retirada mensal; rendimento de aplicações e investimentos em geral; rendimentos de poupança; receitas de aluguel; outras receitas;</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="menu">Menu</string>
    <string name="Button_Conciencia">Conciência</string>
    <string name="Button_Planejamento">Planejamento</string>
    <string name="por_que_importante_entender_suas_receitas_e_despesas">Por que é importante entender suas receitas e despesas?</string>
    <string name="explicacao_conciencia">Planejar sua vida financeira é essencial para evitar dívidas e permitir conquistas importantes, como comprar uma casa, carro ou aumentar o patrimônio. É preciso mapear suas fontes de renda, conhecer todos os seus gastos e garantir que os valores de entrada superam os valores de saída. Para organizar o orçamento doméstico, é recomendado utilizar uma planilha ou aplicativo de acompanhamento de ganhos e gastos. Ao observar com clareza como seu dinheiro está sendo gasto, é possível cortar despesas desnecessárias e estabelecer importantes metas de economia. Dessa forma, você se prepara para realizar sonhos. De uma viagem internacional a comprar um carro novo, sabendo qual o saldo positivo, temos uma projeção ideal de quanto tempo levará para juntar o valor total para concluir seus objetivos.</string>
    <string name="inicial_text_planejamento">Organizar o orçamento doméstico pode ajudar sua família a juntar dinheiro e realizar sonhos! Mudar os hábitos é essencial para alcançar objetivos.  No dia a dia familiar, é comum bagunçar o orçamento. Não saber exatamente quanto ganham, quanto e no que gastaram. Organizar tudo isso faz toda a diferença</string>
    <string name="o_que_or_amento_dom_stico">O que é orçamento doméstico?</string>
    <string name="explicacao_orcamento_domestico">Orçamento doméstico é um método de planejamento e organização financeira que analisa todas as receitas e despesas da família. Os ganhos, dinheiro que entra, e despesas, dinheiro que é gastado.  Isso pode ser feito através de ferramentas de controle, como planilhas ou aplicativos de controle de finanças. Ou ainda o velho caderno. Com o orçamento doméstico é possível analisar no que a família está gastando, o que pode ser cortado e o que é essencial. Também é possível ter mais segurança financeira, criar uma reserva de emergência e começar a investir.</string>
    <string name="a_importancia_do_or_amento_dom_stico">A importancia do orçamento doméstico</string>
    <string name="importancia_orcamento_domestico_explicacao">Um orçamento doméstico bem feito, traz a tranquilidade financeira que a família precisa, além de proporcionar conforto no futuro. Você passa a consumir de forma consciente, junta dinheiro e investe no futuro.</string>
    <string name="passos_para_fazer_um_or_amento_dom_stico">Passos para fazer um orçamento doméstico</string>
    <string name="passos_detalhes">Passo 1 – Defina metas É importante se organizar financeiramente e criar um orçamento doméstico, mas isso exige disciplina. Se você tem objetivos bem definidos, fica mais fácil. Estabeleça com sua família metas de curto, médio e longo prazo. O que vocês querem alcançar? Seja uma viagem, se aposentar bem ou ter mais liberdade financeira.  Enquanto vocês estiverem juntando dinheiro, lembrarem sempre porque estão fazendo isso. Passo 2 – Faça um controle financeiro Essa parte é a mais difícil, porque exige que você mude seus hábitos e organize sua vida financeira.  Anotar todas as entradas (salário, rendas extras, férias, décimo terceiro salário, participação nos lucros) e todas as saídas (escola, moradia, alimentação, lazer, combustível) exige disciplina. Sua renda mensal varia? Quais são as despesas fixas e as despesas variáveis? De volta, essa é a hora de analisar seus erros e acertos. Já junta algum dinheiro todo mês? Tem vários serviços de streaming que não usa? Ou seja, encontre pontos a serem corrigido no orçamento doméstico. Passo 3 – Poupar e investir Agora você já tem o controle de suas despesas e receitas, pode pensar em poupar e investir seu dinheiro. Afinal, dinheiro parado perde poder de compra.</string>
    <string name="o_que_despesa">O que é despesa?</string>
    <string name="explicacao_despesa">As despesas podem ser encaradas como todo tipo de pagamento ou uso de recursos financeiros necessários para manutenção do patrimônio ou atividade em questão, um conceito também aplicável ao planejamento financeiro em diferentes posições. Para o orçamento doméstico, despesas são os gastos obrigatórios para manter sua qualidade de vida, e estão classificadas em FIXAS e VARIÁVEIS.</string>
    <string name="o_que_s_o_despesas_fixas">O que são despesas fixas?</string>
    <string name="explicacao_despesa_fixa">Basicamente, despesas fixas são aquelas que se repetem todo mês no seu orçamento ou então que variam muito pouco. São aquelas contas que já sabemos o valor. Entra mês, sai mês e elas estão lá. Em geral, elas não costumam causar surpresas. Ou seja, o valor cobrado será o mesmo todo mês, salvo o período de reajustes pela lei. Despesas fixas Como vimos, as despesas fixas são aquelas que não variam mês a mês, tais como:</string>
    <string name="exemplos_despesa_fixa">Aluguel e condomínio; Água, Luz, gás Plano de TV, internet e celular; Plano de saúde e plano odontológico; Prestações de empréstimos e financiamentos; Seguros (imóvel, veículo, celular, etc.); Serviços por assinatura (Netflix, Spotify, Disney+, etc.); Serviço de limpeza e lavanderia; Impostos fixos (ex.: guia mensal do MEI e IPTU); Mensalidade da faculdade, academia, curso, etc.; Clubes de assinatura (livros, vinhos, roupas, etc.); Mensalidades de serviços profissionais (professor particular, psicólogo, contador, etc.).</string>
    <string name="o_que_s_o_despesas_vari_veis">O que são despesas variáveis?</string>
    <string name="explicacao_despesa_variaveis">As despesas variáveis oscilam e mudam conforme a frequência e intensidade do consumo. Em resumo, quando o custo da despesa depende do nosso consumo, ela é variável. Por serem mais difíceis de prever, é preciso ter atenção redobrada com esses gastos. Porém, vale ressaltar que, com um pouco de organização, é possível fazer uma média do valor a ser pago mensalmente com base nos gastos dos meses anteriores. Em outras palavras, você pode ter uma previsão do valor dessas despesas.</string>
    <string name="exemplo_despesa_variaveis">Despesas variáveis Já as despesas variáveis podem ser: Alimentação (supermercado, feira, açougue, quitanda, padaria, etc.); Transporte público ou combustível do carro; Serviço de babá/diarista; Estacionamento; Farmácia; Cuidados pessoais (produtos de higiene e ligados ao bem-estar); Produtos de limpeza; Utilidades domésticas; Produtos para pet em geral; Passeios e viagens; Idas a restaurantes e bares; Ingressos de cinema, teatro e museu; Livros, assinaturas de jornais e outros periódicos; Instrumentos e ferramentas; Serviços de beleza; Vestuário em geral; Delivery de comida; Serviços pay per view (PPV); Objetos de decoração; Presentes; Serviços de apps como Uber e 99. Logo, fica claro que o tipo de despesa variável depende muito do seu estilo de vida.</string>
    <string name="configuracoes">Configurações</string>
    <string name="SearchView" />
    <string name="button3_description" />
    <string name="button4_description" />
    <string name="button2_description" />
    <string name="button1_description" />
    <string name="Creditos">Creditos</string>
    <string name="Sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="Creditos_Imagem">TODO</string>
    />

</resources>