<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools
    android:layout_width="
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d9d9d9"
        tools:context=".Planejamento">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/inicial_text_planejamento"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools2:ignore="VisualLintLongText,TextSizeCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/o_que_or_amento_dom_stico"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/explicacao_orcamento_domestico"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools2:ignore="VisualLintLongText,TextSizeCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/a_importancia_do_or_amento_dom_stico"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools2:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/importancia_orcamento_domestico_explicacao"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools2:ignore="VisualLintLongText,TextSizeCheck" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/passos_para_fazer_um_or_amento_dom_stico"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools2:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/passos_detalhes"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools2:ignore="VisualLintLongText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>